--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,5 +5,10 @@
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:statusBarColor">#ffffff</item>
+
     </style>
+
+
 </resources>
